API code cleanup
- Use .raw subfields in aggregations for string values
- Use double in place of float (conversion errors)
- Correct filter construction in results (id filters become term
filters)
- Fix aggregation term names in results
- Introduce hitc and timepointHr filters and aggregations
- Bump aggregation buckets limit to 100
